--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/sampleMain.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/sampleMain.go.njk
@@ -31,12 +31,10 @@ var (
 {%- endfor %}
 {%- for variable, _ in requiredVariablesDefault %}
 {%- if not variables.hasOwnProperty(variable) %}
-    {%- if variable === "location" %}
-    location = getEnv("LOCATION", "eastus")
-    {%- elif variable === "subscriptionId" %}
+    {%- if variable === "subscriptionId" %}
     subscriptionId = getEnv("AZURE_SUBSCRIPTION_ID", "")
     {%- else %}
-    {{variable}} = getEnv("{{jsFunc.toSnakeCase(variable).toUpperCase()}}", "{{requiredVariablesDefault['variable']}}")
+    {{variable}} = getEnv("{{jsFunc.toSnakeCase(variable).toUpperCase()}}", "{{requiredVariablesDefault[variable]}}")
     {%- endif %}
 {%- endif %}
 {%- endfor %}
@@ -104,11 +102,14 @@ func cleanup() {
 func createResourceGroup() error {
 	rand.Seed(time.Now().UnixNano())
 	resourceGroupName = fmt.Sprintf("go-sdk-sample-%d", rand.Intn(1000))
-	rgClient := armresources.NewResourceGroupsClient(subscriptionId, cred, nil)
-	param := armresources.ResourceGroup{
-		Location: to.StringPtr(location),
+	rgClient, err := armresources.NewResourceGroupsClient(subscriptionId, cred, nil)
+    if err != nil {
+		panic(err)
 	}
-	_, err := rgClient.CreateOrUpdate(ctx, resourceGroupName, param, nil)
+	param := armresources.ResourceGroup{
+		Location: to.Ptr(location),
+	}
+	_, err = rgClient.CreateOrUpdate(ctx, resourceGroupName, param, nil)
 	if err != nil {
 		panic(err)
 	}
@@ -116,8 +117,11 @@ func createResourceGroup() error {
 }
 
 func deleteResourceGroup() error {
-	resourceGroup := armresources.NewResourceGroupsClient(subscriptionId, cred, nil)
-	pollerResponse, err := resourceGroup.BeginDelete(ctx, resourceGroupName, nil)
+	rgClient, err := armresources.NewResourceGroupsClient(subscriptionId, cred, nil)
+    if err != nil {
+		panic(err)
+	}
+	pollerResponse, err := rgClient.BeginDelete(ctx, resourceGroupName, nil)
 	if err != nil {
 		panic(err)
 	}
@@ -137,7 +141,10 @@ func getEnv(key, fallback string) string {
 }
 
 func createDeployment(deploymentName string, deployment *armresources.Deployment) *armresources.DeploymentExtended {
-	deployClient := armresources.NewDeploymentsClient(subscriptionId, cred, nil)
+	deployClient, err := armresources.NewDeploymentsClient(subscriptionId, cred, nil)
+    if err != nil {
+		panic(err)
+	}
 	poller, err := deployClient.BeginCreateOrUpdate(
 		ctx,
 		resourceGroupName,
