--- a/tools/sdk-testgen/packages/autorest.gotest/src/template/sampleContent.go.njk
+++ b/tools/sdk-testgen/packages/autorest.gotest/src/template/sampleContent.go.njk
@@ -23,7 +23,7 @@
         {%- endif %}
         {%- if example.returnInfo.length == 2 %}
             {%- if example.isLRO %}
-                {%- set pollerVariable = jsFunc.genVariableName(example.pollerType)%}
+                {%- set pollerVariable = jsFunc.genVariableName(example.pollerType) + "Poller" %}
                 {{pollerVariable}}, err {%- if allVariables.indexOf(pollerVariable)<0 %}:{%- set _ = allVariables.push(pollerVariable) %}{%- endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
             {%- else %}
                 {% if example.checkResponse %}{{resVariable}}{%- else %}_{%- endif %}, err {% if example.checkResponse and allVariables.indexOf(resVariable)<0 %}:{%- set _ = allVariables.push(resVariable) %}{% endif %}= {{clientVariable}}.{{example.opName}}({{example.methodParametersOutput}})
